# HelloRust

./: Cargo.toml  README.md  poem.txt
src/: 02_guessing_game.rs  03_variables_and_mutability.rs  04__01_02_understanding_owership.rs  04__03_understanding_owership.rs  04_understanding_owership.rs  05_01_structs.rs  05_02_example.rs  06_01_defining_an_enum.rs  06_02_match.rs  06_03_if_let.rs  07_01_pachage_and_crates.rs  07_02.rs  07_03.rs  back_of_house.rs  custom_trait.rs  front_of_house.rs  lib.rs  main.rs  mod_02_guessing_game.rs  mod_03_variables_and_mutability.rs  mod_04_understanding_owership.rs  mod_05_struct_and_example.rs  mod_06_enum_match_if_let.rs  mod_07_pachage_and_crates.rs  mod_08_collections.rs  mod_09_error_handling.rs  mod_10_01_generics.rs  mod_10_02_trait.rs  mod_10_03_lifetime.rs  mod_11_01_testing.rs  mod_13_01_closure.rs  mod_13_02_iterators.rs  mod_15_01_box.rs  mod_15_02_deref.rs  mod_15_03_drop.rs  mod_15_04_reference_count.rs  mod_15_05_ref_cell.rs  mod_15_06_reference_cycles.rs  mod_16_01_threads.rs  mod_16_02_message_passing.rs  (+15 more)
src/front_of_house/: hosting.rs  serving.rs
tests/: intergration_test.rs
