#指定name，版本，license等信息
[package]
name = "RustBook_Instances_CN"
version = "0.6.0"
edition = "2021"
license="MIT"
description = "一个包含了RustBook程序实例的学习项目，a project that contains instances of RustBook with Chinese,for studing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

#opt-level指定了编译时的优化级别，可以用dev和release分别指定开发和发布的优化级别

[profile.release]
panic='abort'
opt-level = 3

[profile.dev]
opt-level = 0
